<resources>
    <string name="app_name">Soul Dating</string>
    <string name="fb_appid">2146124145527955</string>
    <string name="fb_secret_key">e0ff9b45fbda6bb3edd80454a9d00376</string>
    <string name="we_do_not_post">WE do not post anything to your facebook</string>
    <string name="by_clicking_sign_up">By clicking Sign Up, you agree to salaam swipe\'s\u0020</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">\u0020&amp;\u0020</string>
    <string name="terms_and_use">Terms of Use</string>
    <string name="first_find_the_best">Find the best match suited \n to you</string>
    <string name="second_swipe_picture_left_to_right">Swipe left to pass or \n right to like</string>
    <string name="third_let_us_notify">We\'ll notify you when there\'s a \n match!</string>
    <string name="four_get_to_know">Get to know your match using \n the app</string>
    <string name="webpage_not_available">Web page not available.</string>
    <string name="nointernetconnction">No internet connection</string>
    <string name="url_not_found">Url not found</string>
    <string name="dummy_url">http://google.com</string>
    <string name="please_wait">Please wait ...</string>
    <string name="loading">Loading ...</string>
    <string name="how_do_you_see">How do you see yourself?</string>
    <string name="finding_potential_matches">FINDING POTENTIAL MATCHES...</string>
    <string name="matches">MATCHES</string>
    <string name="your_matches_are_expiring">\u0020\u0020(YOUR MATCHES ARE EXPIRING)</string>
    <string name="messages">MESSAGES</string>
    <string name="no_message">NO MESSAGES</string>
    <string name="look_like_there_no_new">Looks like there\’s no one \n new in your area</string>
    <string name="try_changing_your_preference">Try Changing your preference</string>
    <string name="check_back_soon">Check back soon</string>
    <string name="or_invite_some">Invite some friends around you!</string>
    <string name="invite_your_friend">INVITE YOUR FRIENDS</string>
    <string name="cancel">Cancel</string>
    <string name="delete_image">Are you sure to delete image?</string>
    <string name="about_me_content">I am little bit crazy, love to dance, eat and obviously to meet new people! Feel free to send me invitation, we will probably meet one day or another!</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="feedback">Feedback</string>
    <string name="urls_feedback">http://salaamswipe.com/#contact</string>
    <string name="about_me">ABOUT ME</string>
    <string name="name">Name</string>
    <string name="search_distance">SEARCH DISTANCE</string>
    <string name="done">DONE</string>
    <string name="show_gender">I\'M  LOOKING FOR</string>
    <string name="notifications">NOTIFY ME WHEN</string>
    <string name="change_filters">FILTER WHO YOU WANT TO SEE</string>
    <string name="description">INCOGNITO MODE</string>
    <string name="edit">EDIT</string>
    <string name="legal">LEGAL</string>
    <string name="education">EDUCATION</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="instagram_username">Enter your instagram username</string>
    <string name="miles"> KM</string>
    <string name="ages">18-60</string>
    <string name="age_range">AGE RANGE</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="contact_us">Contact Us</string>
    <string name="male">Male</string>
    <string name="your_sect">Your Sect</string>
    <string name="your_outlook">Your Outlook</string>
    <string name="your_height">HEIGHT</string>
    <string name="academic">ACADEMIC</string>
    <string name="new_match">New Match</string>
    <string name="new_message">New message</string>
    <string name="female">Female</string>
    <string name="remove_account">Permanently Delete Account </string>
    <string name="logout">Logout</string>
    <string name="user_name">KHALIL, 25</string>
    <string name="interests">INTERESTS</string>
    <string name="my_interest">Gazal, Dua, Artsy </string>
    <string name="outlook">OUTLOOK</string>
    <string name="moderate">moderate</string>
    <string name="sect">SECT</string>
    <string name="sect_shia">shia</string>
    <string name="education_studies_at">Studies Law at ...</string>
    <string name="work">WORK</string>
    <string name="location">LOCATION</string>
    <string name="url_instagram">instagram.com/</string>
    <string name="profile_desc">I am little bit crazy, love to dance,eat, and obviously to meet new people! Feel free to send me invitation, we will probably meet one day or another! </string>
    <string name="lbl_intrests">INTERESTS</string>
    <string name="lbl_outlook">OUTLOOK</string>
    <string name="lbl_sect">SECT</string>
    <string name="lbl_work">WORK</string>
    <string name="lbl_edu">EDUCATION</string>
    <string name="lbl_loc">LOCATION</string>
    <string name="title_activity_edit_interest">EditInterestActivity</string>
    <string name="lbl_add_interest">Add Interest</string>
    <string name="lbl_adventure">Adventure</string>
    <string name="lbl_artsy">Artsy</string>
    <string name="lbl_dua">Dua</string>
    <string name="lbl_gazal">Gazal</string>
    <string name="lbl_rockstar">Rockstar</string>
    <string name="lbl_soi_fi_geek">Soi-Fi Geek</string>
    <string name="lbl_traveller">Traveller</string>
    <string name="lbl_sprit_guru">Spritual Guru</string>
    <string name="lbl_daredevil">Daredevil</string>
    <string name="lbl_runner">Runner</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="lbl_mashallah">Mashallah!</string>
    <string name="lbl_you_match_with">You matched with </string>
    <string name="lbl_send_msg">SEND A MESSAGE</string>
    <string name="lbl_keepswiping">KEEP SWIPING</string>
    <string name="lbl_interest">Interests</string>
    <string name="liberal">Liberal</string>
    <string name="sunni">Sunni</string>
    <string name="willing_to_convert">Willing to convert</string>
    <string name="just_muslim">Just Muslim</string>
    <string name="shia">Shia</string>
    <string name="not_important">Not Important</string>
    <string name="non_practising">Non- Practising</string>
    <string name="conservative">Conservative</string>
    <string name="instagram_account">INSTAGRAM ACCOUNT</string>
    <string name="name_location">Vancouver, British Columbia</string>
    <string name="name_work">Founder of Salaam Swipe</string>
    <string name="name_education">Studies Law at Windsor Law</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">CANCEL</string>
    <string name="lbl_please_wait">Please wait..</string>
    <string name="err_network">Check your internet connection</string>
    <string name="msg_select_only_three_interest">You can select only three interest</string>
    <string name="msg_check_gps">Please turn on your gps</string>
    <string name="turn_on_gps_for_update_location">Please turn on your gps for update location</string>
    <string name="title_your_outlook_activity">YourOutlookActivity</string>
    <string name="title_your_sect_activity">YourSectActivity</string>
    <string name="project_id">8068373247</string>
    <string name="err_empty_outlook">Please select your outlook</string>
    <string name="err_empty_sect">Please select your sect</string>
    <string name="user_id">userid</string>
    <string name="profile_pic">profilepic</string>
    <string name="other_id">otherid</string>
    <string name="send_message">Type a message here</string>
    <string name="send_gif">Send a gif</string>
    <string name="lbl_unmatch">Unmatch</string>
    <string name="lbl_report">REPORT</string>
    <string name="title_activity_chat_report">ChatReportActivity</string>
    <string name="lbl_report_user">REPORT USER</string>
    <string name="lbl_let_us_knw">Let us know what happened</string>
    <string name="lbl_inapropriate_msg">Inappropriate Message</string>
    <string name="lbl_spam">Spam</string>
    <string name="lbl_others">Others</string>
    <string name="title_activity_submit_report">SubmitReportActivity</string>
    <string name="lbl_tell_us_why">Tell us why?</string>
    <string name="hint_why_do_you_reprt">Why do your want to report?</string>
    <string name="err_blank_profile_pic">Please set profile pic in your facebook account</string>
    <string name="empty_reason">please type reason</string>
    <string name="gps_permission_rationale">Please allow the app to use your location so that we can show you the most accurate prices.</string>
    <string name="camera_permission_rationale">Please allow the app to use your camera so that we can upload a profile picture for you.</string>
    <string name="storage_permission_rationale">Please allow the app to view your gallery so that we can upload a profile picture for you.</string>
    <string name="ok">OK</string>
    <string name="title_activity_un_match">UnMatchActivity</string>
    <string name="lbl_unmatch_user">UNMATCH USER</string>
    <string name="lbl_no_reason">No reason</string>
    <string name="lbl_inapropriate_photo">Inappropriate photos</string>
    <string name="lbl_bad_off_behav">Bad offline behavior</string>
    <string name="lbl_caps_unmatch">UNMATCH</string>
    <string name="lbl_no_result">NO RESULT FOUND</string>
    <string name="lbl_small_report">Report</string>
    <string name="title_activity_facebook_album">FacebookAlbumActivity</string>
    <string name="lbl_fb_album">Facebook Albums</string>
    <string name="title_activity_image_gallery">ImageGalleryActivity</string>
    <string name="lbl_fb_images">Facebook Images</string>
    <string name="retry">Retry</string>
    <string name="connect">Connect</string>
    <string name="not_connected">Not connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="search">Search</string>
    <string name="there_no_email_cleint">There are no email clients installed</string>
    <string name="please_try_again">Please try again</string>
    <string name="turn_on_location">Please turn on gps. Please try again.</string>
    <string name="waiting_for_location">Waiting for current location. Try again in a few minutes.</string>
    <string name="lbl_new">New</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="tell_your_friends">Tell your friends</string>
    <string name="like_each_other">You and Ben like each other, you can \n now send him a message</string>
    <string name="its_match">It’s a Match</string>
    <string name="high_school_drop_out">High school drop-out</string>
    <string name="high_school_equivalent">High school equivalent</string>
    <string name="diploma_degree">Diploma degree</string>
    <string name="bachelor_degree">Bachelor Degree</string>
    <string name="master_degree">Master degree</string>
    <string name="select_academic">Select academic</string>
    <string name="select_height">Select height</string>
    <string name="about_mee">About me</string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="privacy_and_policy"><u>Privacy and Policy</u></string>
    <string name="we_don_t_post_anything_to_facebook_n_by_signing_in_you_agree_to_our">We don\'t post anything to Facebook \n    By signing in, you agree to our</string>
</resources>